@startuml

title __ENTITY's Class Diagram__\n

  namespace stars.entity {
    class stars.entity.Course {
        - au : int
        - courseID : String
        - courseName : String
        - indexList : ArrayList<Index>
        - school : String
        + Course()
        + addIndex()
        + getAu()
        + getCourseID()
        + getCourseName()
        + getIndexList()
        + getSchool()
        + print()
        + setAu()
        + setCourseID()
        + setCourseName()
        + setIndexList()
        + setSchool()
    }
  }
  

  namespace stars.entity {
    class stars.entity.Database {
        - coursesArray : ArrayList<Course>
        - studentArray : ArrayList<Student>
        + Database()
        + addCourse()
        + addStudent()
        + findStudent()
        + getCoursesArray()
        + getStudentArray()
    }
  }
  

  namespace stars.entity {
    class stars.entity.EmailService {
        ~ password : String
        ~ username : String
        + EmailService()
        + sendNotification()
    }
  }
  

  namespace stars.entity {
    class stars.entity.Index {
        - confirmedList : ArrayList<Student>
        - indexNumber : int
        - timings : ArrayList<Timing>
        - vacancy : int
        - vacancyLimit : int
        - waitList : ArrayList<Student>
        + Index()
        + addStudentToConfirmedList()
        + addStudentToWaitList()
        + addTiming()
        + dequeueStudent()
        + dropStudentFromConfirmedList()
        + dropStudentFromWaitList()
        + getAU()
        + getConfirmedList()
        + getCourse()
        + getIndexNumber()
        + getTimings()
        + getVacancy()
        + getVacancyLimit()
        + getWaitList()
        + insertStudentToWaitList()
        + print()
        + setConfirmedList()
        + setCourse()
        + setIndexNumber()
        + setTimings()
        + setVacancy()
        + setVacancyLimit()
        + setWaitList()
    }
  }
  

  namespace stars.entity {
    interface stars.entity.NotificationInterface {
        {abstract} + sendNotification()
    }
  }
  

  namespace stars.entity {
    interface stars.entity.Selectable {
        {abstract} + print()
    }
  }
  

  namespace stars.entity {
    class stars.entity.Student {
        - degree : String
        - email : String
        - gender : String
        - nationality : String
        - studentID : String
        - studentName : String
        + Student()
        + addIndex()
        + changeIndex()
        + checkChangeIndex()
        + dropIndex()
        + getConfirmedIndex()
        + getDegree()
        + getEmail()
        + getGender()
        + getNationality()
        + getRegisteredIndex()
        + getStudentID()
        + getStudentName()
        + getWaitlistedIndex()
        + getregisteredCourses()
        + moveToConfirmed()
        + print()
        + sendNotification()
        + swopPlaces()
    }
  }
  

  namespace stars.entity {
    class stars.entity.StudentRegisteredCourses {
        - AU : int
        - confirmedIndexArray : ArrayList<Index>
        - waitlistedIndexArray : ArrayList<Index>
        + StudentRegisteredCourses()
        + addAU()
        + addIndex()
        + addToConfirmedIndexArray()
        + addToWaitlistedIndexArray()
        + changeIndex()
        + dropIndex()
        + getAU()
        + getConfirmedIndexArray()
        + getIndexList()
        + getOwner()
        + getWaitlistedIndexArray()
        + moveToConfirmed()
        + removeFromConfirmedIndexArray()
        + removeFromWaitlistedIndexArray()
        + swopPlaces()
    }
  }
  

  namespace stars.entity {
    class stars.entity.Timing {
        - end : LocalTime
        - start : LocalTime
        + Timing()
        + checkOverlap()
        + getDay()
        + getEnd()
        + getStart()
        + getType()
        + setEnd()
        + setStart()
    }
  }
  

  namespace stars.entity {
    enum Day {
      FRI
      MON
      THU
      TUE
      WED
    }
  }
  

  namespace stars.entity {
    enum Type {
      LAB
      LEC
      TUT
    }
  }
  

  stars.entity.Course .up.|> java.io.Serializable
  stars.entity.Course .up.|> stars.entity.Selectable
  stars.entity.Database .up.|> java.io.Serializable
  stars.entity.EmailService .up.|> stars.entity.NotificationInterface
  stars.entity.EmailService o-- stars.entity.Student : student
  stars.entity.Index .up.|> java.io.Serializable
  stars.entity.Index .up.|> stars.entity.Selectable
  stars.entity.Index o-- stars.entity.Course : course
  stars.entity.Student .up.|> java.io.Serializable
  stars.entity.Student .up.|> stars.entity.Selectable
  stars.entity.Student o-- stars.entity.NotificationInterface : notificationService
  stars.entity.Student o-- stars.entity.StudentRegisteredCourses : registeredCourses
  stars.entity.StudentRegisteredCourses .up.|> java.io.Serializable
  stars.entity.StudentRegisteredCourses o-- stars.entity.Student : owner
  stars.entity.Timing .up.|> java.io.Serializable
  stars.entity.Timing o-- stars.entity.Timing.Day : day
  stars.entity.Timing o-- stars.entity.Timing.Type : type
  stars.entity.Timing +-down- stars.entity.Timing.Day
  stars.entity.Timing +-down- stars.entity.Timing.Type


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
